get single news item, error responder
